# aixplosion

./: .gitignore  AGENTS.md  AIXPLOSION_LOGO_IMPLEMENTATION.md  BASH_TOOL_COMPLETE.md  CLAUDE.md  CLEAR_COMMAND_SUMMARY.md  CONTEXT_COMMAND_SUMMARY.md  CONTEXT_FILES.md  CONTEXT_ONLY_IMPLEMENTATION.md  CONTEXT_ONLY_MODE.md  CONTEXT_SYNTAX.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_CLEANUP_SUMMARY.md  LOGGING_UPDATE.md  LOGGING_UPDATE_COMPLETE.md  MCP_ERROR_HANDLING_IMPROVEMENTS.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INPUT_SCHEMA_FIX.md  MCP_REFRESH_OPTIMIZATION_SUMMARY.md  MCP_STDIO_FIX.md  MCP_SUPPORT.md  PRETTY_TOOL_OUTPUT.md  README.md  SHELL_COMMANDS_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  TEST_CONTEXT_FILES.md  TOOL_OUTPUT_5LINE_LIMIT.md  TOOL_STREAMING_FIX.md  USER_GUIDE.md  WILDCARD_ALLOWLISTING_IMPLEMENTATION.md  YOLO_MODE_IMPLEMENTATION.md  http_client.py  test.py  test_context.sh  test_google_search.md
docs/: CLEAR_COMMAND_IMPLEMENTATION.md  CONTEXT_FILES.md  CONTEXT_ONLY_MODE.md  ESC-CANCELLATION.md  GEMINI_SUPPORT.md  GOOGLE_SEARCH_IMPLEMENTATION.md  LOGGING_CLEANUP_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  PLAN_MODE.md  SHELL_COMMANDS_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  TEST_CONTEXT_FILES.md  TOOL_OUTPUT_5LINE_LIMIT.md  WINDOWS_SHELL_FIX.md  ctrl-r-reverse-search.md  glob-tool.md
src/: agent.rs  anthropic.rs  autocomplete.rs  config.rs  conversation.rs  database.rs  formatter.rs  formatter_tests.rs  gemini.rs  help.rs  init.rs  input.rs  llm.rs  logo.rs  main.rs  mcp.rs  security.rs  subagent.rs  tool_display.rs  tools.rs  (+1 more)
(+23 files in other folders)
