[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
dialoguer = "0.10"
shellexpand = "3.0"
regex = "1.0"
path-absolutize = "3.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
syntect = "5.0"
console = "0.15"
log = "0.4"
env_logger = "0.10"